Bug 42677 - Setting NO_COMPOSITE results in rendering corruptions [SNA]
Summary: Setting NO_COMPOSITE results in rendering corruptions [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-07 11:18 UTC by Clemens Eisserer
Modified: 2011-11-07 14:56 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot of glyph corruption (22.86 KB, image/png)
2011-11-07 11:18 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2011-11-07 11:18:36 UTC
Created attachment 53263 [details]
screenshot of glyph corruption

When enabling NO_COMPOSITE, I get rendering corruptions very similar to those mentioned in bug 42663.

intel i945GM
intel-git
libdrm-2.4.27
pixman-0.23.8
linux-3.1.0
xorg 1.11.1
Comment 1 Chris Wilson 2011-11-07 11:23:34 UTC
This is a little more of a wontfix as it should only be possible to trigger that path with a GPU hang. I'll of course look to see if there is a genuine bug, but I suspect it is hitting an intentional discard path.
Comment 2 Clemens Eisserer 2011-11-07 11:25:23 UTC
I also don't care wether its fixed or not, just thought reporting it does no harm (except maybe you getting tired ;)).
Comment 3 Chris Wilson 2011-11-07 11:47:42 UTC
No worries. :)

It has just been a bad day, fighting against a headache whilst trying to find the 16bit overflow....
Comment 4 Chris Wilson 2011-11-07 14:56:22 UTC
So this turns out not to be so innocuous after all, thanks!

commit 5ba8ba7421e36bcdf83e84423595326939dbe7cd
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 7 22:55:10 2011 +0000

    sna: Avoid overwriting an upload buffer during readback
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Buzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42677
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.